card image gap fixed

--- a/src/components/main/map/mapView/popup-house-info/PopupHouseInfo.scss
+++ b/src/components/main/map/mapView/popup-house-info/PopupHouseInfo.scss
@@ -14,7 +14,7 @@
   height: 107%;
 }
 
-.button-container {
+.popup-button-container {
   display: flex;
   flex-direction: column;
 }
