--- a/src/components/navbar/navbarUserInfo/NavbarUserInfo.scss
+++ b/src/components/navbar/navbarUserInfo/NavbarUserInfo.scss
@@ -8,7 +8,7 @@
   flex-direction: column;
   border-radius: 0 5px 5px 0;
 
-  .button-container {
+  .navbar-button-container {
     position: absolute;
     margin-left: 120px;
     button {
